[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/bomber.png" type="Texture" id=1]
[ext_resource path="res://src/characters/Bomber.gd" type="Script" id=2]
[ext_resource path="res://src/guns/Bomb.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Damage_Flicker.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "dropping",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 61, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.5, 20 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 17.5, 26 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17, 26 )

[node name="Bomber" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )
Bomb_Scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "dropping"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
shape = SubResource( 4 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, 4 )
shape = SubResource( 5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -41.5, -3 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 41, -5 )
shape = SubResource( 7 )

[node name="DirTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Damage_Flicker" parent="." instance=ExtResource( 4 )]
modulate = Color( 0.945098, 0, 1, 0.262745 )
margin_left = -24.0
margin_top = -19.0
margin_right = 24.0
margin_bottom = 21.0
total_time = 0.5
flicker_time = 0.1

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="DirTimer" to="." method="_on_DirTimer_timeout"]
[connection signal="timeout" from="DropTimer" to="." method="_on_DropTimer_timeout"]
